fix #3239- datepicker locked issue
fixed the datepicker locked issue error

--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -162,7 +162,7 @@
                            <label class="control-label col-sm-2">{{'label.input.incorpValidityTillDate' | translate}}</label>
                            <div class="col-sm-3">
                               <input id="incorpValidityTillDate" type="text" name="incorpValidityTillDate" datepicker-pop="dd MMMM yyyy"
-                                 ng-model="first.incorpValidityTillDate" is-open="opened1" max="'2020-06-22'"  class="form-control"/>
+                                 ng-model="first.incorpValidityTillDate" is-open="opened1" class="form-control"/>
                            </div>
                         </div>
                      </div>
