--- a/app/views/loans/addloancharge.html
+++ b/app/views/loans/addloancharge.html
@@ -60,7 +60,7 @@
                             <div class="col-sm-3">
                                 <input id="dueDate" type="text" datepicker-pop="dd MMMM yyyy" class="form-control"
                                        placeholder="{{'label.input.duedate' | translate}}" ng-model="formData.dueDate"
-                                       is-open="opened" min="minDate" max="'2020-06-22'"/>
+                                       is-open="opened" min="minDate"/>
                             </div>
                         </div>
                     </div>
